start css and js functionality, impliment form input and submission

--- a/index.html
+++ b/index.html
@@ -2,18 +2,67 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="js/scripts.js"></script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/styles.css">
+    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <script src="js/jquery-3.3.1.js"></script>
+    <script src="js/scripts.js"></script>
     <title>Dad-Bibs</title>
   </head>
   <body>
-    <div class="form-group">
-      <input class="form-control" id="person1" placeholder="Person">
-    </div>
-    <div class="story">
-      <p>On (day), we are going over to (person)'s house for Easter brunch. Did you know that "brunch" is really a combionation of (noun) and (noun)? They are going to cook my favorite (noun/thing), and I hope they make the (adjective) (Noun/thing). For dessert, (Person) is bringing (noun) pie with (plural noun). I'm feeling (adjective) already!</p>
+    <div class="container">
+      <h1>Let's do a Dad-Bip. Fill out the forms below!</h1>
+      <div>
+        <form id="formOne">
+          <div class="form-group">
+            <label for="day">Day of the week</label>
+            <input id="day" placeholder="(day)" class="form-control">
+          </div>
+          <div class="form-group">
+            <label for="person1">Name of first person</label>
+            <input id="person1" placeholder="(person)" class="form-control">
+          </div>
+          <div class="form-group">
+            <label for="person2">Name of the second person</label>
+            <input id="person2" placeholder="(person)" class="form-control">
+          </div>
+           <div class="form-group">
+            <label for="noun1">First noun</label>
+            <input id="noun1" placeholder="(noun)" class="form-control">
+          </div>
+           <div class="form-group">
+            <label for="noun2">Second noun</label>
+            <input id="noun2" placeholder="(noun)" class="form-control">
+          </div>
+          <div class="form-group">
+             <label for="noun3">Third noun</label>
+             <input id="noun3" placeholder="(noun)" class="form-control">
+          </div>
+          <div class="form-group">
+             <label for="pluralNoun">Plural noun</label>
+             <input id="pluralNoun" placeholder="(plural noun)" class="form-control">
+          </div>
+          <div class="form-group">
+             <label for="adjective1">First adjective</label>
+             <input id="adjective1" placeholder="(adjective)" class="form-control">
+          </div>
+          <div class="form-group">
+            <label for="adjective2">Second adjective</label>
+            <input id="adjective2" placeholder="(adjective)" class="form-control">
+          </div>
+          <div class="form-group">
+            <label for="thing1">First thing</label>
+            <input id="thing1" placeholder="(thing)" class="form-control">
+          </div>
+          <div class="form-group">
+            <label for="thing2">Second thing</label>
+            <input id="thing2" placeholder="(thing)" class="form-control">
+          </div>
+          <button type="submit" class="btn">Show me the story!</button>
+        </form>
+      </div>
+      <div class="story">
+        <p>On <span class="day"></span>, we are going over to <span class="person1"></span>'s house for Easter brunch. Did you know that "brunch" is really a combionation of <span class="noun1"></span> and <span class="noun2"></span>? They are going to cook my favorite <span class="thing1"></span>, and I hope they make the <span class="adjective1"></span> <span class="thing2"></span>. For dessert, <span class="person2"></span> is bringing <span class="noun3"></span> pie with <span class="pluralNoun"></span>. I'm feeling <span class="adjective2"></span> already!</p>
+      </div>
     </div>
   </body>
 </html>
